--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180904.2 Burst analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180904.2 Burst analysis.ipynb
@@ -1267,6 +1267,7 @@
     "    bright_ts = (\n",
     "        data[data[yfp] - data[yfp + \"_bg\"] > 10][yfp].groupby(\"t\").count() > 2\n",
     "    ).sum()\n",
+    "    # bright_ts = data[data[yfp] - data[yfp+'_bg'] > 10][yfp].groupby('t')\n",
     "    return bright_ts\n",
     "\n",
     "\n",
@@ -1338,6 +1339,142 @@
    "source": [
     "%%time\n",
     "len(detected_bursts.groupby(trench_key))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## New visualization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LabelStream = ui.MultiIndexStream.define(\"LabelStream\", labelwise_df.index)\n",
+    "label_stream = LabelStream()\n",
+    "box = ui.dataframe_browser(label_stream)\n",
+    "label_stream.event()\n",
+    "box"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%opts Layout [normalize=False]\n",
+    "%%output size=100\n",
+    "hover = HoverTool(\n",
+    "    tooltips=[\n",
+    "        (\"(x,y)\", \"(@x{0[.]0}, @y{0[.]0})\"),\n",
+    "        (\"value\", \"@z\"),\n",
+    "    ]\n",
+    ")\n",
+    "# cb = compose(partial(ui.hover_image, hover), ui._trench_img, workflow.get_trench_image)\n",
+    "cb = lambda v_max: compose(\n",
+    "    partial(ui.hover_image, hover),\n",
+    "    lambda x: x.redim.range(z=(0, v_max)),\n",
+    "    ui._trench_img,\n",
+    "    workflow.get_trench_image,\n",
+    ")\n",
+    "# cb = workflow.get_trench_image\n",
+    "(\n",
+    "    ui.trench_viewer(\n",
+    "        trench_bboxes, label_stream, channel=\"MCHERRY\", image_callback=cb(4000)\n",
+    "    )\n",
+    "    + ui.trench_viewer(\n",
+    "        trench_bboxes, label_stream, channel=\"YFP\", image_callback=cb(800)\n",
+    "    )\n",
+    ").cols(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "groups = detected_bursts.groupby(trench_key)\n",
+    "group_set_keys = list(util.grouper(groups.groups.keys(), 10))\n",
+    "group_index = pd.MultiIndex.from_tuples([(i,) for i in range(len(group_set_keys))])\n",
+    "group_index.names = [\"group_set\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GroupStream = ui.MultiIndexStream.define(\"GroupStream\", group_index)\n",
+    "group_stream = GroupStream()\n",
+    "group_box = ui.dataframe_browser(group_stream)\n",
+    "group_stream.event()\n",
+    "group_box"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%output size=180\n",
+    "sel = Selection1D()\n",
+    "\n",
+    "\n",
+    "def callback(group_set):\n",
+    "    df = pd.concat([groups.get_group(key) for key in group_set_keys[group_set]])\n",
+    "    plot = hv.Scatter(\n",
+    "        df,\n",
+    "        kdims=[\"t\"],\n",
+    "        vdims=[\"YFP/labelwise/p0.9\", \"filename\", \"position\", \"trench_set\", \"trench\"],\n",
+    "    )\n",
+    "    tooltips = [\n",
+    "        (\"t\", \"@t{0[.]0}\"),\n",
+    "        # ('filename', '@filename'),\n",
+    "        (\"trench\", \"@position.@trench_set.@trench\"),\n",
+    "        (\"YFP\", \"@{YFP/labelwise/p0.9}{0[.]0}\"),\n",
+    "    ]\n",
+    "    hover = HoverTool(tooltips=tooltips)\n",
+    "    tap = TapTool()\n",
+    "    plot = plot.options(\n",
+    "        \"Scatter\",\n",
+    "        size=3,\n",
+    "        color_index=\"trench\",\n",
+    "        nonselection_alpha=0.3,\n",
+    "        cmap=\"Category20\",\n",
+    "        tools=[hover, tap],\n",
+    "        show_legend=True,\n",
+    "    )\n",
+    "    # ui.selection_to_stream(plot, label_stream)\n",
+    "    sel.clear()\n",
+    "    sel.add_subscriber(\n",
+    "        partial(\n",
+    "            ui._selection_to_stream_callback,\n",
+    "            data=plot.data,\n",
+    "            keys=df.index.names,\n",
+    "            stream=label_stream,\n",
+    "        )\n",
+    "    )\n",
+    "    return plot\n",
+    "\n",
+    "\n",
+    "p = hv.DynamicMap(callback, streams=[group_stream])\n",
+    "sel.source = p\n",
+    "p"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Old visualization"
    ]
   },
   {
@@ -1415,54 +1552,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LabelStream = ui.MultiIndexStream.define(\"LabelStream\", labelwise_df.index)\n",
-    "label_stream = LabelStream()\n",
-    "box = ui.dataframe_browser(label_stream)\n",
-    "label_stream.event()\n",
-    "box"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "ui.dataframe_viewer(\n",
     "    partial(ui.select_dataframe, labelwise_df), label_stream, label=slice(None)\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%opts Layout [normalize=False]\n",
-    "%%output size=100\n",
-    "hover = HoverTool(\n",
-    "    tooltips=[\n",
-    "        (\"(x,y)\", \"(@x{0[.]0}, @y{0[.]0})\"),\n",
-    "        (\"value\", \"@z\"),\n",
-    "    ]\n",
-    ")\n",
-    "# cb = compose(partial(ui.hover_image, hover), ui._trench_img, workflow.get_trench_image)\n",
-    "cb = lambda v_max: compose(\n",
-    "    partial(ui.hover_image, hover),\n",
-    "    lambda x: x.redim.range(z=(0, v_max)),\n",
-    "    ui._trench_img,\n",
-    "    workflow.get_trench_image,\n",
-    ")\n",
-    "# cb = workflow.get_trench_image\n",
-    "(\n",
-    "    ui.trench_viewer(\n",
-    "        trench_bboxes, label_stream, channel=\"MCHERRY\", image_callback=cb(4000)\n",
-    "    )\n",
-    "    + ui.trench_viewer(\n",
-    "        trench_bboxes, label_stream, channel=\"YFP\", image_callback=cb(800)\n",
-    "    )\n",
-    ").cols(1)"
    ]
   },
   {
@@ -1512,7 +1604,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Groupby UI"
+    "## Grouped trench scatterplot UI"
    ]
   },
   {
@@ -1522,9 +1614,9 @@
    "outputs": [],
    "source": [
     "groups = detected_bursts.groupby(trench_key)\n",
-    "group_set_keys = list(util.grouper(groups.groups.keys(), 5))\n",
-    "index = pd.MultiIndex.from_tuples([(i,) for i in range(len(group_set_keys))])\n",
-    "index.names = [\"group_set\"]"
+    "group_set_keys = list(util.grouper(groups.groups.keys(), 10))\n",
+    "group_index = pd.MultiIndex.from_tuples([(i,) for i in range(len(group_set_keys))])\n",
+    "group_index.names = [\"group_set\"]"
    ]
   },
   {
@@ -1533,20 +1625,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GroupStream = ui.MultiIndexStream.define(\"GroupStream\", index)\n",
+    "GroupStream = ui.MultiIndexStream.define(\"GroupStream\", group_index)\n",
     "group_stream = GroupStream()\n",
-    "box = ui.dataframe_browser(group_stream)\n",
+    "group_box = ui.dataframe_browser(group_stream)\n",
     "group_stream.event()\n",
-    "box"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s.subscribers"
+    "group_box"
    ]
   },
   {
@@ -1617,6 +1700,78 @@
    "outputs": [],
    "source": [
     "sel"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Grouped trench movie UI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "group_box"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%output size=180\n",
+    "# sel = Selection1D()\n",
+    "def callback(group_set):\n",
+    "    #     df = pd.concat([groups.get_group(key) for key in group_set_keys[group_set]])\n",
+    "    #     plot = hv.Scatter(df,\n",
+    "    #                       kdims=['t'],\n",
+    "    #                       vdims=['YFP/labelwise/p0.9', 'filename',\n",
+    "    #                              'position', 'trench_set', 'trench'])\n",
+    "    #     tooltips = [('t', '@t{0[.]0}'),\n",
+    "    #             #('filename', '@filename'),\n",
+    "    #             ('trench', '@position.@trench_set.@trench'),\n",
+    "    #             ('YFP', '@{YFP/labelwise/p0.9}{0[.]0}')]\n",
+    "    #     hover = HoverTool(tooltips=tooltips)\n",
+    "    #     tap = TapTool()\n",
+    "    #     plot = plot.options('Scatter',\n",
+    "    #                         size=3,\n",
+    "    #                         color_index='trench',\n",
+    "    #                         nonselection_alpha=0.3,\n",
+    "    #                         cmap='Category20',\n",
+    "    #                         tools=[hover, tap],\n",
+    "    #                         show_legend=True)\n",
+    "    # ui.selection_to_stream(plot, label_stream)\n",
+    "    #     sel.clear()\n",
+    "    #     sel.add_subscriber(partial(ui._selection_to_stream_callback,\n",
+    "    #                                data=plot.data,\n",
+    "    #                                keys=df.index.names,\n",
+    "    #                                stream=label_stream))\n",
+    "    movies = []\n",
+    "    for key in group_set_keys[group_set]:\n",
+    "        ts = groups.get_group(key).index.get_level_values(\"t\")\n",
+    "        movie = hv.HoloMap(\n",
+    "            {\n",
+    "                t: ui._trench_img(\n",
+    "                    workflow.get_trench_image(\n",
+    "                        trench_bboxes, key[0], key[1], \"YFP\", t, key[2], key[3]\n",
+    "                    )\n",
+    "                )\n",
+    "                for t in ts\n",
+    "            }\n",
+    "        )\n",
+    "        movies.append(movie)\n",
+    "    plot = hv.Layout(movies).cols(1)\n",
+    "    return plot\n",
+    "\n",
+    "\n",
+    "p = hv.DynamicMap(callback, streams=[group_stream])\n",
+    "# sel.source = p\n",
+    "p"
    ]
   },
   {
