WIP burst analysis.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180916 Burst analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180916 Burst analysis.ipynb
@@ -1156,11 +1156,11 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "# labelwise_selected = labelwise_df.loc[IDX['/n/scratch2/jqs1/fidelity/all/TrErr002_Exp.nd2',:],:]\n",
-    "# labelwise_selected = labelwise_df.loc[IDX['/n/scratch2/jqs1/fidelity/all/180405_txnerr_loweronly_fast.nd2',:],:]\n",
     "labelwise_selected = labelwise_df.loc[\n",
-    "    IDX[\"/n/scratch2/jqs1/fidelity/all/180405_txnerr_loweronly_fast.nd2\", :], :\n",
-    "]"
+    "    IDX[\"/n/scratch2/jqs1/fidelity/all/TrErr002_noBF.nd2\", :], :\n",
+    "]\n",
+    "# labelwise_selected = labelwise_df.loc[IDX['/n/scratch2/jqs1/fidelity/all/180405_txnerr_loweronly_fast.nd2',:],:]\n",
+    "# labelwise_selected = labelwise_df.loc[IDX['/n/scratch2/jqs1/fidelity/all/180405_txnerr_loweronly_fast.nd2',:],:]"
    ]
   },
   {
@@ -1450,11 +1450,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "x = cell_sized_with_ts[yfp + \"_bg\"]\n",
+    "x[x < 180].hist(bins=50, log=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%time\n",
     "# detected_bursts3 = cell_sized_with_ts[(cell_sized_with_ts[yfp+'_bg'] <= 200) & (cell_sized_with_ts['bright_ts_bg_20'] >= 2)]\n",
     "detected_bursts3 = cell_sized_with_ts[\n",
-    "    (cell_sized_with_ts[yfp + \"_bg\"] >= 200)\n",
-    "    & (cell_sized_with_ts[\"bright_ts_bg_20\"] >= 2)\n",
+    "    (cell_sized_with_ts[yfp + \"_bg\"].between(120, 130))\n",
+    "    & (cell_sized_with_ts[\"bright_ts_bg_20\"] >= 1)\n",
     "]"
    ]
   },
@@ -1603,7 +1613,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ui.select_dataframe(trenchwise_df, **{**label_stream.contents, \"t\": slice(None)})"
+    "def cb(**kwargs):\n",
+    "    dat = workflow.select_dataframe(\n",
+    "        labelwise_df, kwargs, t=slice(None), label=slice(None)\n",
+    "    )\n",
+    "    plot = dat.hvplot.scatter(\"t\", yfp).options(tools=[\"tap\", \"hover\"])\n",
+    "    # ui.selection_to_stream(plot, label_stream)\n",
+    "    return plot\n",
+    "\n",
+    "\n",
+    "ui.viewer(cb, label_stream)"
    ]
   },
   {
@@ -1612,7 +1631,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ui.select_dataframe(cell_sized_with_ts, **{**label_stream.contents, \"t\": slice(None)})"
+    "workflow.select_dataframe(trenchwise_df, label_stream.contents, t=slice(None))"
    ]
   },
   {
@@ -1621,11 +1640,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ui.dataframe_viewer(\n",
-    "    partial(ui.select_dataframe, cell_sized_with_ts),\n",
-    "    label_stream,\n",
-    "    label=slice(None),\n",
-    "    t=slice(None),\n",
+    "cell_sized_with_ts.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "workflow.select_dataframe(\n",
+    "    cell_sized_with_ts, label_stream.contents, t=0, label=slice(None)\n",
     ")"
    ]
   },
@@ -1635,12 +1660,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ui.dataframe_viewer(\n",
-    "    partial(ui.select_dataframe, background),\n",
-    "    label_stream,\n",
-    "    label=slice(None),\n",
-    "    t=slice(None),\n",
-    ")"
+    "# ui.dataframe_viewer(partial(ui.select_dataframe, cell_sized_with_ts), label_stream, label=slice(None), t=slice(None))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ui.dataframe_viewer(partial(ui.select_dataframe, background), label_stream, label=slice(None), t=slice(None))"
    ]
   },
   {
@@ -1675,6 +1704,20 @@
     "    + trench_movie(trench_bboxes, key, \"YFP\", ts)\n",
     ").cols(1)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Time behavior"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
