--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180917 Burst analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180917 Burst analysis.ipynb
@@ -1048,7 +1048,7 @@
    "source": [
     "%%time\n",
     "framewise_df = data_io.read_parquet(\n",
-    "    \"/n/scratch2/jqs1/fidelity/all/output/analysis_full_stream11_0.parquet4\"\n",
+    "    \"/n/scratch2/jqs1/fidelity/all/output/analysis_full_stream11_0.sorted.parquet4\"\n",
     ").to_pandas()"
    ]
   },
@@ -1060,7 +1060,7 @@
    "source": [
     "%%time\n",
     "trenchwise_df = data_io.read_parquet(\n",
-    "    \"/n/scratch2/jqs1/fidelity/all/output/analysis_full_stream11_1.parquet4\"\n",
+    "    \"/n/scratch2/jqs1/fidelity/all/output/analysis_full_stream11_1.sorted.parquet4\"\n",
     ").to_pandas()"
    ]
   },
@@ -1156,11 +1156,11 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "# labelwise_selected = labelwise_df.loc[IDX['/n/scratch2/jqs1/fidelity/all/TrErr002_Exp.nd2',:],:]\n",
-    "# labelwise_selected = labelwise_df.loc[IDX['/n/scratch2/jqs1/fidelity/all/180405_txnerr_loweronly_fast.nd2',:],:]\n",
+    "# labelwise_selected = labelwise_df.loc[IDX['/n/scratch2/jqs1/fidelity/all/TrErr002_noBF.nd2',:],:]\n",
     "labelwise_selected = labelwise_df.loc[\n",
     "    IDX[\"/n/scratch2/jqs1/fidelity/all/180405_txnerr_loweronly_fast.nd2\", :], :\n",
-    "]"
+    "]\n",
+    "# labelwise_selected = labelwise_df.loc[IDX['/n/scratch2/jqs1/fidelity/all/180405_txnerr.nd2',:],:]"
    ]
   },
   {
@@ -1450,12 +1450,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "x = cell_sized_with_ts[yfp + \"_bg\"]\n",
+    "x[x < 180].hist(bins=50, log=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%time\n",
     "# detected_bursts3 = cell_sized_with_ts[(cell_sized_with_ts[yfp+'_bg'] <= 200) & (cell_sized_with_ts['bright_ts_bg_20'] >= 2)]\n",
+    "# detected_bursts3 = cell_sized_with_ts[(cell_sized_with_ts[yfp+'_bg'].between(120, 130)) & (cell_sized_with_ts['bright_ts_bg_20'] >= 1)]\n",
     "detected_bursts3 = cell_sized_with_ts[\n",
-    "    (cell_sized_with_ts[yfp + \"_bg\"] >= 200)\n",
-    "    & (cell_sized_with_ts[\"bright_ts_bg_20\"] >= 2)\n",
+    "    (cell_sized_with_ts[\"bright_ts_median_t_50\"] >= 100)\n",
     "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(detected_bursts3)"
    ]
   },
   {
@@ -1560,12 +1579,20 @@
     "    plot = hv.Scatter(\n",
     "        df,\n",
     "        kdims=[\"t\"],\n",
-    "        vdims=[\"YFP/labelwise/p0.9\", \"filename\", \"position\", \"trench_set\", \"trench\"],\n",
+    "        vdims=[\n",
+    "            \"YFP/labelwise/p0.9\",\n",
+    "            \"filename\",\n",
+    "            \"position\",\n",
+    "            \"trench_set\",\n",
+    "            \"trench\",\n",
+    "            \"label\",\n",
+    "        ],\n",
     "    )\n",
     "    tooltips = [\n",
     "        (\"t\", \"@t{0[.]0}\"),\n",
     "        # ('filename', '@filename'),\n",
     "        (\"trench\", \"@position.@trench_set.@trench\"),\n",
+    "        (\"label\", \"@label\"),\n",
     "        (\"YFP\", \"@{YFP/labelwise/p0.9}{0[.]0}\"),\n",
     "    ]\n",
     "    hover = HoverTool(tooltips=tooltips)\n",
@@ -1603,7 +1630,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ui.select_dataframe(trenchwise_df, **{**label_stream.contents, \"t\": slice(None)})"
+    "%%output size=180\n",
+    "def cb(**kwargs):\n",
+    "    df = workflow.select_dataframe(\n",
+    "        labelwise_df, kwargs, t=slice(None), label=slice(None)\n",
+    "    )\n",
+    "    # df = workflow.select_dataframe(labelwise_df, kwargs, label=slice(None))\n",
+    "    plot = hv.Scatter(\n",
+    "        df,\n",
+    "        kdims=[\"t\"],\n",
+    "        vdims=[\n",
+    "            \"YFP/labelwise/p0.9\",\n",
+    "            \"filename\",\n",
+    "            \"position\",\n",
+    "            \"trench_set\",\n",
+    "            \"trench\",\n",
+    "            \"label\",\n",
+    "        ],\n",
+    "    )\n",
+    "    tooltips = [\n",
+    "        (\"t\", \"@t{0[.]0}\"),\n",
+    "        # ('filename', '@filename'),\n",
+    "        (\"trench\", \"@position.@trench_set.@trench\"),\n",
+    "        (\"label\", \"@label\"),\n",
+    "        (\"YFP\", \"@{YFP/labelwise/p0.9}{0[.]0}\"),\n",
+    "    ]\n",
+    "    hover = HoverTool(tooltips=tooltips)\n",
+    "    plot = plot.options(\n",
+    "        \"Scatter\",\n",
+    "        size=3,\n",
+    "        color_index=\"label\",\n",
+    "        nonselection_alpha=0.3,\n",
+    "        cmap=\"Category20\",\n",
+    "        tools=[hover, \"tap\"],\n",
+    "        show_legend=True,\n",
+    "    )\n",
+    "    return plot\n",
+    "\n",
+    "\n",
+    "ui.viewer(cb, label_stream)"
    ]
   },
   {
@@ -1612,7 +1677,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ui.select_dataframe(cell_sized_with_ts, **{**label_stream.contents, \"t\": slice(None)})"
+    "workflow.select_dataframe(trenchwise_df, label_stream.contents, t=slice(None))"
    ]
   },
   {
@@ -1621,11 +1686,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ui.dataframe_viewer(\n",
-    "    partial(ui.select_dataframe, cell_sized_with_ts),\n",
-    "    label_stream,\n",
-    "    label=slice(None),\n",
-    "    t=slice(None),\n",
+    "cell_sized_with_ts.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "workflow.select_dataframe(\n",
+    "    cell_sized_with_ts, label_stream.contents, t=0, label=slice(None)\n",
     ")"
    ]
   },
@@ -1635,12 +1706,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ui.dataframe_viewer(\n",
-    "    partial(ui.select_dataframe, background),\n",
-    "    label_stream,\n",
-    "    label=slice(None),\n",
-    "    t=slice(None),\n",
-    ")"
+    "# ui.dataframe_viewer(partial(ui.select_dataframe, cell_sized_with_ts), label_stream, label=slice(None), t=slice(None))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ui.dataframe_viewer(partial(ui.select_dataframe, background), label_stream, label=slice(None), t=slice(None))"
    ]
   },
   {
@@ -1674,6 +1749,51 @@
     "    trench_movie(trench_bboxes, key, \"MCHERRY\", ts)\n",
     "    + trench_movie(trench_bboxes, key, \"YFP\", ts)\n",
     ").cols(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Time behavior"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "median_by_t = cell_sized_with_ts.groupby(\"t\").median()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "median_by_t[yfp].hvplot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "mean_by_t = cell_sized_with_ts.groupby(\"t\").mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mean_by_t[yfp].hvplot()"
    ]
   },
   {
